package com.todoapp.core

object TestTags {
    const val ORDER_SECTION ="Order_Section"
    const val TITLE_TEXT_FIElD ="Title_Text_Field"
    const val CONTENT_TEXT_FIElD ="Content_Text_Field"
}