<resources>
    <string name="app_name">To Do :)</string>
    <string name="your">"Your Notes"</string>
    <string name="delete">"Note deleted"</string>
    <string name="undo">"Undo"</string>
    <string name="addNote">"Add note"</string>
    <string name="sort">"Sort"</string>
    <string name="save_note">"Save note"</string>
    <string name="title_msg">"The title of the note can't be empty"</string>
    <string name="content_msg">"The content of the note can't be empty"</string>
</resources>